objects/ssot__TaxDisclosureSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CustomerTaxCollectedAmount__c</fullName>
        <label>Customer Tax Collected</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclosedByName__c</fullName>
        <label>Disclosed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeTaxWithheldAmount__c</fullName>
        <label>Employee Tax Withheld</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeTotalIncomeAmount__c</fullName>
        <label>Employee Total Income</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Tax Disclosure Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeTaxAccruedAmount__c</fullName>
        <label>Income Tax Accrued</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeTaxPaidAmount__c</fullName>
        <label>Income Tax Paid</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryTaxDueAmount__c</fullName>
        <label>Industry Tax Due</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IntraCompanyDebtAmount__c</fullName>
        <label>Intra Company Debt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IntraGroupTrxnRevAmount__c</fullName>
        <label>Intra-Group Transaction Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryActivityText__c</fullName>
        <label>Primary Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfitLossBeforeTaxAmount__c</fullName>
        <label>Profit Loss Before Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TangibleAssetValue__c</fullName>
        <label>Tangible Asset Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxJurisdictionName__c</fullName>
        <label>Tax Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ThirdPartySalesRevenueAmount__c</fullName>
        <label>Third Party Sales Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UncertainTaxPositionVal__c</fullName>
        <label>Uncertain Tax Position Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383882389_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaxDisclosureSummary_SubsidiaryAccou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>TaxDisclosureSummary_SubsidiaryAccou_rel</relationshipLabel>
        <relationshipName>rel_1747383882389_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383884200_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaxDisclosureSummary_DisclsReporting_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>TaxDisclosureSummary_DisclsReporting_rel</relationshipLabel>
        <relationshipName>rel_1747383884200_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>